# FacetForge

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
configs/facets/: emotion.yaml  linguistic.yaml  pragmatics.yaml  safety.yaml
configs/models/: inference.yaml
configs/scoring/: batching.yaml  rubric_templates.yaml  score_scale.yaml
data/processed/: sample_run.jsonl
data/samples/: sample_conversations.csv
notebooks/: exploratory_analysis.ipynb
outputs/predictions/: sample_run_facet_results.csv  sample_run_turn_results.jsonl
outputs/reports/: sample_run_category_summary.csv  sample_run_features.csv  sample_run_manifest.json  sample_run_normalized_turns.csv
scripts/: generate_facet_configs.py  generate_sample_dataset.py  run_pipeline.py  validate_facets.py
src/: __init__.py
src/api/: app.py
src/evaluation/: __init__.py  export.py  metrics.py  runner.py
src/facets/: __init__.py  batching.py  registry.py  rubric.py
src/features/: __init__.py  emotion.py  lexical.py  pragmatics.py  safety.py
src/inference/: __init__.py  llm_client.py  parser.py  prompts.py
src/ingestion/: __init__.py  loader.py  preprocess.py  schema.py
src/scoring/: __init__.py  aggregator.py  calibrator.py  confidence.py  judge.py
src/ui/: __init__.py  streamlit_app.py
src/utils/: __init__.py  constants.py  io.py  logging.py
tests/: test_api.py  test_preprocess.py  test_registry.py  test_scoring.py
